Add tests with Mockito.